--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
 nav {
   background-color: steelblue;
   padding: 10px;
@@ -5,34 +11,39 @@ nav {
 
 nav a {
   color: white;
-  display: block;
- padding: 20px;
+  padding: 10 px;
+ display: block;
 }
 
 h1 {
-  color: steelblue; 
+  color: steelblue;
+  padding: .5rem; 
 }
 
-img {
+main {
+  max-width: 640px;
+}
+
+ main img {
   width: 150px;
   height: auto;
   border: 1px solid steelblue;
   padding: 2px;
   box-shadow: 0 0 30px gray;
+  float: right;
+  margin:0 0 1rem 1rem;
 }
 
+
 p {
+  margin: 1rem;
   padding: 0px;
 }
 
 aside {
-width: 20rem
-margin: 1rem;
-border: 1px solid rgba(0,0,0,0.2); /* 1*/
-padding: 1em;
-background-color: #eee;
-color: #333;
+width: 20em
 text-align: center;
+position; relative;
 }
 
 aside img {
@@ -40,8 +51,27 @@ aside img {
   height: auto;
 }
 
+aside h2 {
+  position: absolute;
+  left: 120px;
+}
+
+
 footer {
   margin-top: 1em;
   border-top: 1px solid #000;
   text-align: center;
+}
+
+/* Class Selectors */
+.box {
+  margin: 1rem;
+  border: 1px solid rgba(0,0,0,.1);
+padding: 1rem;
+background-color: #eee;
+color: #000;
+}
+
+.indent {
+  padding-left: 2rem;
 }
