--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,38 +1,95 @@
+/* Font family added */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+body {
+  font-size: 16px;
+  font-family: var(Roboto,sans-serif);
+  max-width: 960px;
+  padding: 20px;
+}
+
+:root {
+  --Primary-color:#98838f;
+  --secondary-color:#16E0BD;
+  --accent1-color:#78C3FB;
+  --accent2-color:#98CE00;
+
+--heading-font: 'Roboto',serif;
+--paragraph-font: 'Poppins',serif;
+}
+
+
+
 nav {
-    background-color: steelblue;
-    padding: 10px;
+    background-color: var(--nav-background-color);
+    font-size: 1.2rem;
+    display: flex;
   }
   
   nav a {
-    color: white;
     display: block;
-   padding: 20px;
+    color: var(--secondary-color);
+    text-decoration: none;
+   padding: 1rem;
   }
   
+
+
   h1 {
-    color: steelblue; 
+    font-family: var(Roboto);
+    color:#98838f; 
+  }
+
+  h2 {
+    font-family: var(Poppins);
+    color: #16E0BD;
   }
   
+  header {
+    padding: 20 px;
+    background-color: var(--accent1-color);
+  }
+
+
   img {
-    width: 150px;
-    height: auto;
-    border: 1px solid steelblue;
-    padding: 2px;
-    box-shadow: 0 0 30px gray;
+    width:;
+    height:;
+    border:;
+    padding: ;
+    box-shadow:;
   }
   
   p {
-    padding: 0px;
+    padding: 25px;
   }
   
+  nav a {
+    display: block;
+    color: var(--nav-link-color);
+    text-decoration: none;
+    padding: 1rem;
+  }
+
+  nav a:link, nav a:visited{
+    color: var(--nav-link-color);
+  }
+
+  nav a:hover {
+    color: var(--nav-hover-link-color);
+    background-color: var(--nav-hover-background-color);
+  }
+
+
+
+
   aside {
-  width: 20rem
-  margin: 1rem;
-  border: 1px solid rgba(0,0,0,0.2); /* 1*/
-  padding: 1em;
-  background-color: #eee;
-  color: #333;
-  text-align: center;
+  width: 
+  margin:;
+  border: 
+  padding:;
+  background-color:;
+
+  text-align:;
   }
   
   aside img {
@@ -41,8 +98,8 @@ nav {
   }
   
   footer {
-    margin-top: 1em;
-    border-top: 1px solid #000;
-    text-align: center;
+    margin-top:;
+    border-top:;
+    text-align:;
   }
   
