--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,11 @@ padding: 0;
 box-sizing: border-box;
 }
 
+body {
+  font-size: 16px;
+  font-family: Roboto,Poppins,serif;
+}
+
 nav {
   background-color: steelblue;
   padding: 10px;
@@ -11,7 +16,7 @@ nav {
 
 nav a {
   color: white;
-  padding: 10 px;
+  padding: 10px;
  display: block;
 }
 
@@ -34,16 +39,15 @@ main {
   margin:0 0 1rem 1rem;
 }
 
-
 p {
   margin: 1rem;
   padding: 0px;
 }
 
 aside {
-width: 20em
+width: 20em;
 text-align: center;
-position; relative;
+position: relative;
 }
 
 aside img {
@@ -67,10 +71,16 @@ footer {
 .box {
   margin: 1rem;
   border: 1px solid rgba(0,0,0,.1);
-padding: 1rem;
-background-color: #eee;
-color: #000;
+  padding: 1rem;
+  background-color: #eee;
+  color: #000;
 }
+
+aside {
+  width: 20em;
+  text-align: center;
+}
+
 
 .indent {
   padding-left: 2rem;
