--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 body {
   font-size: 16px;
-  font-family: var(Roboto,sans-serif);
+  font-family: var(--paragraph-font);
   max-width: 960px;
   padding: 20px;
 }
@@ -36,27 +36,27 @@ nav {
 
 
   h1 {
-    font-family: var(Roboto);
+    font-family: var(--heading-font);
     color:#98838f; 
   }
 
   h2 {
-    font-family: var(Poppins);
+    font-family: var(--Primary-color);
     color: #16E0BD;
   }
   
   header {
-    padding: 20 px;
+    padding: 20px;
     background-color: var(--accent1-color);
   }
 
 
   img {
-    width:;
-    height:;
-    border:;
-    padding: ;
-    box-shadow:;
+    width: 0;
+    height: 0;
+    border: 0;
+    padding: 0;
+    
   }
   
   p {
@@ -83,13 +83,12 @@ nav {
 
 
   aside {
-  width: 
-  margin:;
-  border: 
-  padding:;
-  background-color:;
+  width: 0;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  
 
-  text-align:;
   }
   
   aside img {
@@ -98,8 +97,7 @@ nav {
   }
   
   footer {
-    margin-top:;
-    border-top:;
-    text-align:;
+    margin-top: 0;
+    border-top: 0;
   }
   
