--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,11 @@
+header, footer {
+  max-width: 840px;
+  margin: 0 auto
+}
+
+
+
+
 * {
 margin: 0;
 padding: 0;
@@ -11,22 +19,42 @@ body {
 
 nav {
   background-color: steelblue;
-  padding: 10px;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 nav a {
   color: white;
-  padding: 10px;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
  display: block;
 }
 
 h1 {
   color: steelblue;
   padding: .5rem; 
+
+}
+
+.grid {
+ display:grid;
+align-items: center;
 }
 
 main {
-  max-width: 640px;
+  grid-column: 2/3;
+  margin: 1rem;
+}
+
+aside{
+width: 20rem;
+position: relative;
+grid-column:  1/2;
+grid-row: 1/2;
 }
 
  main img {
@@ -60,6 +88,14 @@ aside h2 {
   left: 120px;
 }
 
+h2 {
+  display: block;
+  font-size:  1.5em;
+  margin-block-start:  0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
 
 footer {
   margin-top: 1em;
