--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,12 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+header, .grid, footer {
+  max-width: 840px;
+  margin: 0 auto
+}
+
+
+nav {
+  background-color: rgb(157, 178, 195);
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
 body {
     font-size: 16px;
     font-family: var(--paragraph-font);
-    max-width: 960px;
+    max-width: 850px;
     padding: 20px;
-  }
-  
+}
+
+hi,h2,h3,h4,h5,h6 {
+  font-family: var(--heading-font);
+  color: var(--Primary-color);
+}
+
+header {
+  padding: 60px;
+  background-color: #b6ebe2;
+}
+
+p {
+  padding: 0%;
+}  
+ 
   :root {
     --Primary-color:#98838f;
     --secondary-color:#16E0BD;
@@ -15,7 +45,38 @@ body {
   
   --heading-font: 'Roboto',serif;
   --paragraph-font: 'Poppins',serif;
+
+  --nav-background-color:var(--accent1-color);
+  --nav-link-color:var(--Primary-color);
+  --nav-hover-link-color:var(--accent2-color);
+  ---nav-hover-background-color:var(--secondary-color);
   }
+nav {
+  background-color: #98CE00;
+  font-size:  1.2rem;
+  display: flex;
+}
+
+nav a {
+ display: block;
+
+}
+
+nav a:hover {
+  color: var(--nav-hover-link-color);
+  background-color: #16E0BD;
+  
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
