--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,6 +6,12 @@ header, .grid, footer {
   margin: 0 auto
 }
 
+.hero img {
+  display: block;
+  width: 100%;
+  height:auto;
+}
+
 
 nav {
   background-color: rgb(157, 178, 195);
