--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,16 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+ *{
+  margin: 0;
+  padding: 0;
+ }
+
 header, .grid, footer {
   max-width: 840px;
   margin: 0 auto
 }
+main {
+  max-width: 800px;
+  margin: 2rem auto;
+  font-family: Roboto,Poppins, serif;
+}
+
+h2{
+  text-align: center;
+  font-size: 1.5rem;
+  text-shadow: 3px 3px 5px #777;
+}
+
+.herodiv{
+  margin: 10px auto;
+  position: absolute;
+}
+
 
 .hero img {
   display: block;
   width: 100%;
   height:auto;
-}
+  object-fit: cover;
+  }
+
+  .stats {
+    position: absolute;
+    top: 25px;
+    right: 15px;
+    background: radial-gradient(#eee, #4567aa);
+    border: 1px solid #000;
+    padding: 0.65rem;
+    box-shadow: 0 0 30px #111;
+    opacity: 0.9;
+  }
 
 
 nav {
