--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,7 +4,7 @@
  header {
   margin: 1rem auto;
   display: grid;
-  grid-template-columns: 120px 1fr 2fr;
+  grid-template-columns: 120px fr 2fr;
   align-items: center;
   border-bottom: 1px solid #ccc;
   max-width: 1000px;
@@ -37,8 +37,8 @@ flex: 1 1 100%;
 .navigation a {
   display: block;
   color: #0e3a92;
-  padding: 20px;
-  text-decoration: var(--nav-background-color);
+  padding: 5px;
+  text-decoration: none;
 }
 
 .navigation a:hover {
