--- a/week05/styles/quiz.css
+++ b/week05/styles/quiz.css
@@ -32,7 +32,7 @@ body {
     }
 
     .column1 {
-      grid-template-columns: ;
+      grid-template-columns: 0;
       margin: 0 0;
     }
 
@@ -71,7 +71,7 @@ body {
     }
 
     label {
-        text-align: right;
+        text-align: left;
         padding-right: 1rem;
     }
 
