--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -2,13 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
  header {
+
   margin: 1rem auto;
   display: grid;
   grid-template-columns: 120px fr 2fr;
   align-items: center;
   border-bottom: 1px solid #ccc;
   max-width: 1000px;
- }
+  padding: 60px;
+  background-color: red;
+  }
+ 
 
  .logo img {
    margin: 0 0.25rem 0 1rem;
@@ -114,10 +118,7 @@ hi,h2,h3,h4,h5,h6 {
   color: var(--Primary-color);
 }
 
-header {
-  padding: 60px;
-  background-color: #b6ebe2;
-}
+ 
 
 p {
   padding: 0%;
