--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -94,6 +94,9 @@ body {
         border-radius: .5rem;
         padding: .75rem;
         font-size: 1.2rem;
+        justify-content: center;
+        width: 30%;
+        margin-left: 20%;
     }
 
     button:hover {
