--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -2,22 +2,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
  header {
-
-  margin: 1rem auto;
-  display: grid;
-  grid-template-columns: 120px fr 2fr;
+  
+  display: flex;
+  
   align-items: center;
   border-bottom: 1px solid #ccc;
-  max-width: 1000px;
-  padding: 60px;
-  background-color: red;
+  
+  padding: 10px;
+    background-color: #b6ebe2;
   }
- 
+  
 
- .logo img {
+
+ .logo {
    margin: 0 0.25rem 0 1rem;
-   width: 64px;
-   height: auto;
+   width: 100px;
+   
 }
 
 h1 {
@@ -25,13 +25,11 @@ font-size: 2rem;
 font-family: Roboto,Poppins, serif;
 }
 
-nav {
-  text-align: right;
-}
 
 .navigation {
   display: flex;
 list-style: none;
+
 }
 
 .navigation li {
@@ -50,55 +48,82 @@ flex: 1 1 100%;
   font-weight: 700;
   text-decoration: underline;
 }
-
+hi{
+  margin: top 0;;
+}
 
 main {
-  max-width: 800px;
-  margin: 2rem auto;
+  
+  
   font-family: Roboto,Poppins, serif;
 }
 
 h2{
+  margin-top: 50px;
   text-align: center;
   font-size: 1.5rem;
   text-shadow: 3px 3px 5px #777;
-  position: absolute;
+  
 }
-.herodiv{
-  margin: 10px auto;
-  position: absolute;
+form {
+  margin-left: 25%;
 }
-.hero img {
-  display: block;
+.map {
+  margin-left: 10px;
+}
+
+.herobackground {
   width: 100%;
-  height:auto;
-  object-fit: cover;
-  }
+position: absolute;
+z-index: -1;
 
-  aside  {
-    position: absolute;
-    left: 820px;
-  }
+}
 
-  .stats {
-    position: absolute;
-    top: 25px;
-    right: 15px;
-    background: radial-gradient(#eee, #4567aa);
-    border: 1px solid #000;
-    padding: 0.65rem;
-    box-shadow: 0 0 30px #111;
-    opacity: 0.9;
-  }
-  aside  {
-    width: 20em;
-    text-align: center;
-  }
+.hero h1 {
+  text-align: center;
+
+  color: white
+}
+
+.History {
+  
+  margin-top: 20px;
+  display: flex;
+  gap: 20px
+
+}
+.HIstory_header {
+text-align: center;
+}
+
+
+.herobox {
+  margin: 20px;
+  background-color: #89dc9849;
+display: flex;
+
+justify-content:  center;
+gap: 20px;
+padding-top: 20px;
+padding-bottom: 20px;
+}
+
+.Gallery {
+
+  display: flex;
+  gap: 20px
+}
+
+.Gallery img {
+  width: 100%;
+}
+ 
   
 
 
 nav {
-  background-color: rgb(157, 178, 195);
+
+  font-size:  1.2rem;
   padding: 1rem;
   display: flex;
   justify-content: space-evenly;
@@ -107,22 +132,22 @@ nav {
 
 
 body {
+  
     font-size: 16px;
     font-family: var(--paragraph-font);
-    max-width: 850px;
-    padding: 20px;
+    
+    margin: 0px;
+    
 }
 
-hi,h2,h3,h4,h5,h6 {
+
+h1,h2,h3,h4,h5,h6 {
   font-family: var(--heading-font);
   color: var(--Primary-color);
 }
 
- 
 
-p {
-  padding: 0%;
-}  
+
  
   :root {
     --Primary-color:#98838f;
@@ -138,11 +163,8 @@ p {
   --nav-hover-link-color:var(--accent2-color);
   ---nav-hover-background-color:var(--secondary-color);
   }
-nav {
-  background-color: #98CE00;
-  font-size:  1.2rem;
-  display: flex;
-}
+
+
 
 nav a {
  display: block;
@@ -154,3 +176,15 @@ nav a:hover {
   background-color: #16E0BD;
   
 }
+footer {
+
+background-color: #b6ebe2;
+}
+
+
+
+
+
+
+
+
