--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -59,14 +59,19 @@ main {
 }
 
 h2{
-  margin-top: 50px;
+  margin-left: 1%;
   text-align: center;
   font-size: 1.5rem;
   text-shadow: 3px 3px 5px #777;
   
 }
+
+h3{
+  margin-left: 
+}
+
 form {
-  margin-left: 25%;
+  margin-left: 1%;
 }
 .map {
   margin-left: 10px;
