--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -48,8 +48,8 @@ flex: 1 1 100%;
   font-weight: 700;
   text-decoration: underline;
 }
-hi{
-  margin: top 0;;
+h1{
+  margin-top:  0;
 }
 
 main {
@@ -67,7 +67,7 @@ h2{
 }
 
 h3{
-  margin-left: 
+  margin-left: 0px; 
 }
 
 form {
@@ -166,7 +166,7 @@ h1,h2,h3,h4,h5,h6 {
   --nav-background-color:var(--accent1-color);
   --nav-link-color:var(--Primary-color);
   --nav-hover-link-color:var(--accent2-color);
-  ---nav-hover-background-color:var(--secondary-color);
+  --nav-hover-background-color:var(--secondary-color);
   }
 
 
