--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,7 +12,18 @@
     background-color: #b6ebe2;
   }
   
-
+.Call_to_Action {
+  background-color: #b6ebe2;
+  padding: 10px;
+  text-decoration: none;
+  border: 2px solid black;
+  border-radius: 20px;
+  justify-content: center;
+  margin-left: 40%;
+}
+.Call_to_Action:hover {
+  background-color: white;
+}
 
  .logo {
    margin: 0 0.25rem 0 1rem;
