--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -90,7 +90,7 @@ z-index: -1;
 
 .hero h1 {
   text-align: center;
-
+  position: relative;
   color: white
 }
 
@@ -189,11 +189,4 @@ footer {
 
 background-color: #b6ebe2;
 }
-
-
-
-
-
-
-
 
